page cutoff fix pls

--- a/react_project/src/Components_CSS/Friends.css
+++ b/react_project/src/Components_CSS/Friends.css
@@ -20,7 +20,6 @@
 .status {
     margin: 0;
     white-space: nowrap;
-    overflow: hidden;
     text-overflow: ellipsis;
     max-width: 150px;
 }
